objects/SharepointSetting__mdt.object
<CustomObject>
    <description>Custom Metadata type for the Web to Lead creation from Sharepoint</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReAssignLead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field has the porpoise to apply the Lead assignment rules on the records created on the Site CreateLeadForm of Sharepoint</description>
        <label>Re Assign Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubBranch__c</fullName>
        <label>Sub Branch</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sharepoint Setting</label>
    <listViews>
        <fullName>Record_type</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>ReAssignLead__c</columns>
        <columns>SubBranch__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>Record type</label>
    </listViews>
    <pluralLabel>Sharepoint Settings</pluralLabel>
</CustomObject>